# scout-archive

./: .gitignore  AGENTS.md  Makefile  README.md  _config.yml  american-business-merit-badge.md  american-cultures-merit-badge.md  american-heritage-merit-badge.md  american-labor-merit-badge.md  animal-science-merit-badge.md  animation-merit-badge.md  archaeology-merit-badge.md  archery-merit-badge.md  architecture-merit-badge.md  art-merit-badge.md  astronomy-merit-badge.md  athletics-merit-badge.md  automotive-maintenance-merit-badge.md  aviation-merit-badge.md  backpacking-2-merit-badge.md  backpacking-merit-badge.md  basketry-merit-badge.md  bird-study-merit-badge.md  bugling-merit-badge.md  camping-merit-badge.md  canoeing-merit-badge.md  chemistry-merit-badge.md  chess-merit-badge.md  citizenship-in-society-merit-badge.md  citizenship-in-the-community-merit-badge.md  citizenship-in-the-nation-merit-badge.md  citizenship-in-the-world-merit-badge.md  climbing-merit-badge.md  coin-collecting-merit-badge.md  collections-merit-badge.md  communication-merit-badge.md  composite-materials-merit-badge.md  cooking-merit-badge.md  crime-prevention-merit-badge.md  cycling-merit-badge.md  (+107 more)
.github/: copilot-instructions.md
cub-scout-adventures/: index.md
docs/: architecture-overview.md  json-format.md
merit-badges/: american-business-merit-badge.json  american-business-merit-badge.md  american-cultures-merit-badge.json  american-cultures-merit-badge.md  american-heritage-merit-badge.json  american-heritage-merit-badge.md  american-indian-culture-merit-badge.json  (+296 more)
(+309 files in other folders)
