[project]
name = "scout-requirements-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "markdownify>=0.13.1",
    "pillow>=10.4.0",
    "scrapy>=2.11.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
