[project]
name = "scout-requirements-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "markdownify>=0.13.1",
    "pillow>=10.4.0",
    "pydantic>=2.8.2",
    "scrapy>=2.11.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.8.1",
    "ty>=0.0.8",
]
